@@ -104,7 +104,7 @@
 				vboxVersionCheck($('#vboxIndex').data('vboxConfig').version);
 
 				// Resizable
-				$('#vboxResizeBar').draggable({cursor:(jQuery.browser.opera ? 'e-resize' : 'col-resize'),axis:'x',zIndex:1000,helper:'clone',scroll:false,'start':function(e){
+				$('#vboxResizeBar').draggable({cursor:(jQuery.browser.opera ? 'e-resize' : 'col-resize'),axis:'x',zIndex:99,helper:'clone',scroll:false,'start':function(e){
 					document.body.style.cursor = (jQuery.browser.opera ? 'e-resize' : 'col-resize');
 					$('#vboxResizeBar').data('vboxX',e.pageX);
 				},'stop':function(e){
@@ -113,14 +113,15 @@
 
 					var nx = $('#vboxVMList').width() + (e.pageX - $('#vboxResizeBar').data('vboxX'));
 					$('#vboxVMList').css('width',(nx)+'px');
-					
+
 					// Constraint check
 					if($('#vboxVMList').width() < $('#vboxVMList').parent().innerWidth())
 						$('#vboxVMList').css('width',($('#vboxVMList').parent().innerWidth())+'px');
 					
 					var exp = new Date(2020,12,24);
 					document.cookie = "vboxPaneX="+($('#vboxVMList').width())+"; expires="+exp.toGMTString()+"; path=/";
-								
+					
+					$('#vboxPaneVMList').css('width',$('#vboxVMList').css('width'));
 					
 				}}).css('cursor',(jQuery.browser.opera ? 'e-resize' : 'col-resize'));
 
@@ -138,10 +139,16 @@
 
 			// Resize table elements
 			$(window).resize(function(){
-				$('#vboxResize').children().children().css({'display':'none'});
 				
-				var h = $('#vboxResize').find('td').first().innerHeight();
-				$('#vboxResize').children().children().css({'height':h+'px','overflow':'auto','display':''});
+				$('#vboxResizePane').children().children().css({'display':'none'});
+				
+				var h = $('#vboxResize').innerHeight();
+				$('#vboxResizePane').children().children().css({'height':h+'px','overflow':'auto','display':''});
+				// special for resize bar
+				$('#vboxResizeBar').css({'height':(h-10)+'px'});
+				// special for bordered vm list
+				$('#vboxPaneVMList').children().css({'height':(h-4)+'px'});
+
 			});
 
 			// Refresh data when host changes
@@ -162,40 +169,48 @@
 
 </head>
 <body>
-<div id='vboxIndex'>
-<table id='vboxTableMain' cellpadding=0 cellspacing=0 style="width: 100%; padding: 0px; margin: 0px; border: 0px; border-spacing: 0px;">
+<div id='vboxIndex' style='height: 100%'>
+<table id='vboxTableMain' cellpadding=0 cellspacing=0 style="height: 100%; width: 100%; padding: 0px; margin: 0px; border: 0px; border-spacing: 0px;">
 	<tr style='vertical-align: top;'>
-		<td colspan='3' id='vboxMenu'>
-			<!--
-				Menu Bar will be placed here 
-			 -->
+		<td style='height:20px;border:0px;padding:0px;margin:0px;border-spacing:0px;'>
+			<div id='vboxMenu'>
+				<!--
+					Menu Bar will be placed here 
+				 -->
+			</div>
 		</td>
 	</tr>
 	<tr style='vertical-align: middle;'>
-		<td class='vboxPaneTop vboxInvisible' colspan='3'>
+		<td style='height: 70px; border:0px;padding:0px;margin:0px;border-spacing:0px;'>
 			<!-- VMList toolbar -->
 			<div id='vboxPaneToolbar'></div>
 			<!-- Tabs / Buttons -->
 			<div id='vboxTabsList'></div>
 		</td>
 	</tr>
-	<tr style='vertical-align: top;' id='vboxResize'>
-		<td id="vboxPaneVMList" class='vboxBordered'>
-			<!--
-			
-			VM List
-				
-			-->
-		</td>
-		<td id='vboxResizeTD' style='border: 0px; width: 2px; margin: 0px; padding: 0px; text-align: center;'>
-			<div style='z-index: 5; position: absolute; margin:0px; padding:2px; width: 0px; height: 90%;' id='vboxResizeBar' onmouseover='this.style.backgroundColor="#cccccc";' onmouseout="this.style.backgroundColor='';" ></div>
-		</td>
-		<td id="vboxPaneTabContent">
-			<!--
-			
-				Tab content will go here
-			
-			 -->
+	<tr style='vertical-align: top;'>
+		<td style='border:0px;padding:0px;margin:0px;border-spacing:0px;' id='vboxResize'>
+			<table style='width:100%;border:0px;padding:0px;border-spacing:0px;margin:0px' id=''>
+				<tr id='vboxResizePane' style='vertical-align: top;'>
+					<td id="vboxPaneVMList" style='padding:0px;border-spacing:0px;margin:0px'>
+						<!--
+						
+						VM List
+							
+						-->
+					</td>
+					<td id='vboxResizeTD' style='border: 0px; width: 2px; margin: 0px; padding: 0px; text-align: center;'>
+						<div style='z-index: 99; position: absolute; margin:0px; margin-top: 2px; padding:2px; width: 0px; height: 90%;' id='vboxResizeBar' onmouseover='this.style.backgroundColor="#cccccc";' onmouseout="this.style.backgroundColor='';" ></div>
+					</td>
+					<td id="vboxPaneTabContent" style='width:100%;border:0px;padding:0px;border-spacing:0px;margin:0px'>
+						<!--
+						
+							Tab content will go here
+						
+						 -->
+					</td>
+				</tr>
+			</table>
 		</td>
 	</tr>
 </table>
