@@ -6,7 +6,7 @@
 	$Id$
 
  -->
-<div id='vboxTabVMSnapshots' class='vboxInvisible' style='display: none;'>
+<div id='vboxTabVMSnapshots' class='vboxInvisible' style='display: none; width:100%;'>
 
 	<table class='vboxInvisible' style='height: 99%; width: 99%'>
 		<tr style='vertical-align: top; height: 1%'>
